Reduce the java version to ensure compatibility
java 21 -> java 8